--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div>
-      <img src="image/flopper.png" alt="flopper" />
+      <img src="/flopper.png" alt="flopper" />
       <h1>Hi, I am Shiju,<br />Creative Technologist</h1>
       <hr />
       <h2>I apologize for the inconvenience.</h2>
